# pc-lab-kit

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.md  PCVerse  PCVerse.bat  README.md  TRADEMARK.md  composer.json  llms.txt  phpunit.xml
.github/workflows/: release-bundles.yml
agent/pcverse_probe/: PCVerseProbe.ps1  PCVerseProbeServe.ps1  Start-PCVerseProbe.bat
app/: Database.php  Router.php  helpers.php
app/Actions/: TrackUserEventAction.php
app/Controllers/: AppUpdateController.php  DiagnosticApiController.php  DiagnosticController.php  DownloadController.php  LabPitchController.php  SettingsApiController.php
app/Services/: AdminService.php  AppReleaseService.php  AppUpdateService.php  BenchmarkDatasetService.php  LlmService.php  (+18 more)
config/: app.php  benchmark_datasets.php  build-deps.json  diagnostic.php  diagnostic_game_anchors.php  diagnostic_game_awards.php  diagnostic_games.json  tool_catalog.php
cron/: refresh_diagnostic_games.php
doc/: API_MOBILE_ROUTES.md
docs/: API_MOBILE_ROUTES.md  FAQ.md  GITHUB_PUBLISH_AND_RELEASE.md  INTEGRATION.md  MASTER_PLAN.md  README.md  bootstrap.routes.snippet.php
e2e/: diagnostic-popup.spec.ts
native/: ARCHITECTURE.md  CMakeLists.txt  README.md
native/apps/pcverse/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MonitorPage.cpp  MonitorPage.h  ProbeClient.cpp  ProbeClient.h  ScanPage.cpp  ScanPage.h  SensorClient.cpp  SensorClient.h  SettingsPage.cpp  SettingsPage.h  SettingsStore.cpp  SettingsStore.h  ToolkitPage.cpp  ToolkitPage.h  UpdateController.cpp  UpdateController.h  main.cpp
native/apps/pcverse/resources/: app.qrc  dark.qss
native/apps/pcverse_cli/: CMakeLists.txt  main.cpp
native/assets/: tool_catalog.json
native/core/: CMakeLists.txt
native/core/include/pcverse/: config.hpp  semver.hpp
native/core/include/pcverse/hw/: sensor_collector.hpp
native/core/include/pcverse/update/: http_fetch.hpp  release_checker.hpp
native/core/src/: semver.cpp
native/core/src/hw/: sensor_collector.cpp
native/core/src/update/: http_fetch.cpp  release_checker.cpp
public/: index.php
routes/: web.php
scripts/: bootstrap-build-tools.ps1  bootstrap-build-tools.sh  bootstrap-qt.ps1  bootstrap-qt.sh  build-agent-bundle.ps1  build-installer-linux.sh  build-installer-windows.ps1  build-lab-unix.sh  build-lab-windows.ps1  build-native-desktop.ps1  build-native-desktop.sh  build-native-installer-linux.sh  build-native-installer-windows.ps1  build-native-release.ps1  build-pcverse-hwmon.ps1  build-release.ps1  deploy-qt-linux.sh  export-tool-catalog.php  generate_diagnostic_games.php  install.ps1  install.sh  run-native-desktop.ps1  stage-payload-unix.sh  start.ps1  start.sh
tests/: Pest.php
(+90 files in other folders)
